board, player field

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="format-detection" content="telephone=no" />
-  <title>타이틀</title>
+  <title>splander</title>
 
-  <meta name="title" content="타이틀" />
-  <meta name="author" content="회사" />
-  <meta name="description" content="상세설명" />
-  <meta name="keywords" content="키워드" />
+  <meta name="title" content="splander" />
+  <meta name="author" content="key" />
+  <meta name="description" content="스플랜더 플레이를 위한 토이 프로젝트" />
+  <meta name="keywords" content="스플랜더플레이용토이프로젝트" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="유알엘" />
-  <meta property="og:title" content="타이틀" />
-  <meta property="og:description" content="상세설명" />
+  <meta property="og:title" content="splander" />
+  <meta property="og:description" content="스플랜더 플레이를 위한 토이 프로젝트" />
   <meta property="og:image" content="assets/images/favicon/og.png" />
   <!-- Twitter -->
   <meta property="twitter:url" content="유알엘" />
-  <meta property="twitter:title" content="타이틀" />
-  <meta property="twitter:description" content="상세설명" />
+  <meta property="twitter:title" content="splander" />
+  <meta property="twitter:description" content="스플랜더 플레이를 위한 토이 프로젝트" />
 
   <!-- END Open Graph -->
 
@@ -64,10 +64,26 @@
 <body>
   <div id="app">
     <div class="wrap">
-      <!-- page FIXME: class명 변경 -->
-      <div id="page" class="pagename">
+      <div id="page" class="main">
         <!-- content area -->
-        <h1>asdfasdf</h1>
+        <h1>방목록</h1>
+        <ul class="room-list-wrapper">
+          <li class="room-list splander">
+            <!-- <img src="" alt="스플랜더 이미지" /> -->
+            <span class="type">스플랜더 - 대도시</span>
+            <span class="player">3 / 4</span>
+          </li>
+          <li class="room-list splander">
+            <!-- <img src="" alt="스플랜더 이미지" /> -->
+            <span class="type">스플랜더</span>
+            <span class="player">2 / 4</span>
+          </li>
+          <li class="room-list splander">
+            <!-- <img src="" alt="스플랜더 이미지" /> -->
+            <span class="type">스플랜더 - 성채</span>
+            <span class="player">1 / 4</span>
+          </li>
+        </ul>
       </div>
       <!-- END page -->
     </div>
