카드, 코인 형태1

--- a/splander.html
+++ b/splander.html
@@ -112,6 +112,22 @@
                     <div class="card">
                       <div class="top_conts">
                         <!-- TODO: red, blue, white, black, green -->
+                        <div class="card_color blue"></div>
+                        <!-- TODO: 0일 때 안보이기 -->
+                        <div class="point">2</div>
+                      </div>
+                      <div class="pay_conts">
+                        <!-- TODO: 0일 때 안보이기 -->
+                        <div class="coin red">1</div>
+                        <div class="coin blue">1</div>
+                        <div class="coin white">1</div>
+                        <div class="coin black">0</div>
+                        <div class="coin green">0</div>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="top_conts">
+                        <!-- TODO: red, blue, white, black, green -->
                         <div class="card_color red"></div>
                         <!-- TODO: 0일 때 안보이기 -->
                         <div class="point">2</div>
@@ -128,7 +144,7 @@
                     <div class="card">
                       <div class="top_conts">
                         <!-- TODO: red, blue, white, black, green -->
-                        <div class="card-color red"></div>
+                        <div class="card_color white"></div>
                         <!-- TODO: 0일 때 안보이기 -->
                         <div class="point">2</div>
                       </div>
@@ -144,23 +160,7 @@
                     <div class="card">
                       <div class="top_conts">
                         <!-- TODO: red, blue, white, black, green -->
-                        <div class="card-color red"></div>
-                        <!-- TODO: 0일 때 안보이기 -->
-                        <div class="point">2</div>
-                      </div>
-                      <div class="pay_conts">
-                        <!-- TODO: 0일 때 안보이기 -->
-                        <div class="coin red">1</div>
-                        <div class="coin blue">1</div>
-                        <div class="coin white">1</div>
-                        <div class="coin black">0</div>
-                        <div class="coin green">0</div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="top_conts">
-                        <!-- TODO: red, blue, white, black, green -->
-                        <div class="card-color red"></div>
+                        <div class="card_color green"></div>
                         <!-- TODO: 0일 때 안보이기 -->
                         <div class="point">2</div>
                       </div>
@@ -179,7 +179,7 @@
                     <div class="card">
                       <div class="top_conts">
                         <!-- TODO: red, blue, white, black, green -->
-                        <div class="card_color red"></div>
+                        <div class="card_color black"></div>
                         <!-- TODO: 0일 때 안보이기 -->
                         <div class="point">2</div>
                       </div>
